added batch file processing

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,3 +23,7 @@ packages =
 [entry_points]
 console_scripts =
     android-view-refactor = android_view_refactor.android_view_refactor:tool
+
+[flake8]
+filename = *.py
+ignore = E101,E241
